--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div class="d-flex flex-column align-items-center justify-content-center vh-100 container">
     <div class="card p-3 m-auto" style="width: 18rem;">
-      <img src="./images/image-qr-code.png" class="card-img-top" alt="...">
+      <img src="./images/image-qr-code.png" class="card-img-top rounded-4" alt="...">
       <div class="card-body px-0 text-center">
         <h5 class="card-title">Improve your front-end skills by building projects</h5>
         <p class="card-text fw-light"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next
