--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="attribution my-3">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/preloboy/qr-code-component">Prelo Tulshi</a>.
     </div>
   </div>
 
